logs/transporter.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/transporter'...
Compiling './lib/python3.5/site-packages/transporter/actions.py'...
***   File "./lib/python3.5/site-packages/transporter/actions.py", line 143
    print "trying to create directory", os.path.split(realpath)[0]
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/transporter/app.py'...
***   File "./lib/python3.5/site-packages/transporter/app.py", line 33
    print ">>>", e
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/transporter/client.py'...
***   File "./lib/python3.5/site-packages/transporter/client.py", line 104
    print "connection closed, quitting"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/transporter/index.py'...
***   File "./lib/python3.5/site-packages/transporter/index.py", line 34
    print "you need to install sqlite3 module, please refer to docs"
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/transporter/server.py'...
***   File "./lib/python3.5/site-packages/transporter/server.py", line 92
    print "no patches... nothing changed ??"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/transporter/watcher.py'...
***   File "./lib/python3.5/site-packages/transporter/watcher.py", line 65
    print "ignorable by can_ignore"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/transporter-0.2.egg-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
